mdapipkg/objects/Doctor__c/fields/Clinic_Address__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Address__c</fullName>
    <label>Clinic Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>