mdapipkg/objects/Doctor__c/fields/Number_of_Patients__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Patients__c</fullName>
    <label>Number of Patients</label>
    <summaryForeignKey>Doctor_Patient_Assignment__c.Doctor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>