mdapipkg/objects/Doctor__c/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <label>phone</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>