mdapipkg/objects/Doctor__c/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>gynecologist</fullName>
            </value>
            <value>
                <fullName>normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>