mdapipkg/objects/Doctor__c/validationRules/Doctor_Email_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Doctor_Email_Format</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT( ISBLANK( Email__c ) ),
  NOT( REGEX( UPPER( Email__c ), &quot;^[A-Z0-9._%+-]+@[A-Z0-9.-]+\\.[A-Z]{2,}$&quot; ) )
)</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Enter a valid email address.</errorMessage>
</ValidationRule>