mdapipkg/objects/Doctor__c/validationRules/Doctor_NumPatients_NonNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>Doctor_NumPatients_NonNegative</fullName>
    <active>true</active>
    <errorConditionFormula>Number_of_Patients__c &lt; 0</errorConditionFormula>
    <errorMessage>Number of Patients cannot be negative.</errorMessage>
</ValidationRule>