mdapipkg/objects/Doctor__c/validationRules/Doctor_Phone_10_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Doctor_Phone_10_digits</fullName>
    <active>true</active>
    <description>Ensure numeric 10-digit phone</description>
    <errorConditionFormula>NOT(
  OR(
    ISBLANK(phone__c),
    REGEX(phone__c, &quot;^[0-9]{10}$&quot;)
  )
)</errorConditionFormula>
    <errorDisplayField>phone__c</errorDisplayField>
    <errorMessage>Phone number must be 10 digits.</errorMessage>
</ValidationRule>